--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "submodules/elm-svg"]
 	path = submodules/elm-svg
 	url = https://github.com/evancz/elm-svg.git
+[submodule "submodules/core"]
+	path = submodules/core
+	url = https://github.com/avh4/elm-lang-core.git
